--- a/css/index.css
+++ b/css/index.css
@@ -19,22 +19,16 @@
     --btn-soundRain-color: #00c3ff;
     --btn-soundRain-color-hover: #40d0fc;
 
-    --btn-soundCoffeeShop-color: #FFD600;
+    --btn-soundCoffeeShop-color: #e0bb00;
     --btn-soundCoffeeShop-color-hover: #fade53;
 
     --btn-soundFireplace-color: #ff0000;
     --btn-soundFireplace-color-hover: #f85353;
 
-    /*--primary-volume-color: #6200ee;
-    --segundary-volume-color: #c6aee7;
-    --circle-volume: #f5f5f5;
-    --circle-volume-hover: rgba(98,0,238,.1);
-    --circle-volume-active: rgba(98,0,238,.2);*/
-
     font-size: 62.5%;
 }
 
-/*body.active {
+body.active {
     --bg-color: #121214;
     --primary-color: #f5f5f5;
 
@@ -43,10 +37,7 @@
 
     --primary-volume-color: #f5f5f5;
     --segundary-volume-color: #5c5c5c;
-    --circle-volume: #6200ee;
-    --circle-volume-hover: rgba(255, 255, 255, 0.2);
-    --circle-volume-active: rgb(255, 255, 255, 0.3);
-}*/
+}
 
 body {
     background: var(--bg-color);
@@ -58,21 +49,21 @@ body {
     min-height: 100vh;
 }
 
-header {
-    align-self: flex-start;
+.temas {
+    display: grid;
     justify-self: end;
-    padding: 4rem 4rem 6rem 6rem;
-    position: absolute;
+    align-self: baseline;
 }
 
-header button svg {
-    width: clamp(2rem, 2rem + 2vw, 4rem);
+.temas button {
+    margin: 2rem 4rem;
 }
 
 main {
     align-self: center;
     justify-self: center;
     display: flex;
+    margin-top: -30rem;
 
     gap: 20rem;
 }
@@ -97,16 +88,9 @@ button svg path {
     fill: var(--primary-color)
 }
 
-@media (max-width: 950px)
-{
+@media (max-width: 650px) {
     main {
-        display: grid;
-        gap: 2rem;
+        display: block;
         margin-top: -50rem;
-    }
-
-    header {
-        position: relative;
-        padding: 2rem 2rem 0rem 6rem;
     }
 }
